[package]
name = "quickcheck"
version = "1.0.3"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Automatic property based testing with shrinking."
documentation = "https://docs.rs/quickcheck"
homepage = "https://github.com/BurntSushi/quickcheck"
repository = "https://github.com/BurntSushi/quickcheck"
readme = "README.md"
keywords = ["testing", "quickcheck", "property", "shrinking", "fuzz"]
categories = ["development-tools::testing"]
license = "Unlicense OR MIT"
exclude = ["/Makefile", "/ctags.rust", "/session.vim"]
edition = "2021"

[workspace]
members = ["quickcheck_macros", "quickcheck_rpc"]

[features]
default = ["regex", "use_logging"]
use_logging = ["log", "env_logger"]
regex = ["env_logger/regex"]

[lib]
name = "quickcheck"

[dependencies]
async-trait = "0.1.89"
env_logger = { version = "0.11", default-features = false, optional = true }
futures = "0.3.31"
log = { version = "0.4", optional = true }
rand = { version = "0.9", default-features = false, features = ["os_rng", "small_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["full"] }
tonic = "0.14.1"
quickcheck_macros = { path = "./quickcheck_macros" }
quickcheck_rpc = { path = "./quickcheck_rpc" }